# prm

./: .gitignore  Cargo.toml
src/: cli.rs  db.rs  editor.rs  entities.rs  helpers.rs  lib.rs  main.rs
src/cli/: add.rs  edit.rs
src/entities/: activity.rs  event.rs  note.rs  person.rs  reminder.rs
