[package]
name = "prm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
edit = "0.1.4"
rusqlite = "0.29.0"
strfmt = "0.2.4"
strum = "0.24.1"
strum_macros = "0.24.3"
