[package]
name = "prm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
edit = "0.1.4"
exitcode = "1.1.2"
ics = "0.5.8"
mockall = "0.11.4"
rusqlite = "0.29.0"
snafu = "0.7.4"
strfmt = "0.2.4"
strum = "0.25.0"
strum_macros = "0.25.2"
uuid = { version = "1.3.2", features = ["v4"] }
